fix: wider view on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,17 @@
 html {
   position: relative;
   min-height: 100%;
+  /* change at end before publishing? */
+  width: 120vw;
 
+	@media (min-width:1050px)  {
+		width: 100vw;
+	}
+
+
+  
 }
 
 body {
   margin: 0 0 0 0;
-
 }
